k8s/frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: chat-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chat-app-frontend
  template:
    metadata:
      labels:
        app: chat-app-frontend
    spec:
      containers:
        - name: chat-app-frontend
          image: shawmeer22/chatapp-frontend
          ports:
            - containerPort: 80
