k8s/mongodb-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-deployment
  namespace: chat-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chat-app-mongodb
  template:
    metadata:
      labels:
        app: chat-app-mongodb
    spec:
      containers:
        - name: mongodb
          image: mongo:6.0.8
          ports:
            - containerPort: 27017
      volumes:
        - name: mongo-data
          persistentVolumeClaim:
            claimName: mongodb-pvc
